k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp1-service
spec:
  selector:
    app: sampleapp1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
